--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc -b && vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"lint": "biome lint --write",
+		"format": "biome format --write"
 	},
 	"dependencies": {
 		"react": "^19.1.1",
