--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
 		"format": "biome format --write"
 	},
 	"dependencies": {
+		"@tailwindcss/vite": "^4.1.14",
 		"@tanstack/react-query": "^5.90.2",
+		"@tanstack/react-router": "^1.132.37",
+		"@tanstack/react-router-devtools": "^1.132.37",
 		"react": "^19.1.1",
-		"react-dom": "^19.1.1"
+		"react-dom": "^19.1.1",
+		"tailwindcss": "^4.1.14"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.2.5",
+		"@tanstack/router-plugin": "^1.132.37",
 		"@types/node": "^24.6.0",
 		"@types/react": "^19.1.16",
 		"@types/react-dom": "^19.1.9",
