--- a/package.json
+++ b/package.json
@@ -12,22 +12,23 @@
 	},
 	"dependencies": {
 		"@tailwindcss/vite": "^4.1.14",
-		"@tanstack/react-query": "^5.90.2",
-		"@tanstack/react-router": "^1.132.37",
-		"@tanstack/react-router-devtools": "^1.132.37",
-		"react": "^19.1.1",
-		"react-dom": "^19.1.1",
+		"@tanstack/react-query": "^5.90.3",
+		"@tanstack/react-router": "^1.132.47",
+		"@tanstack/react-router-devtools": "^1.133.1",
+		"react": "^19.2.0",
+		"react-dom": "^19.2.0",
 		"tailwindcss": "^4.1.14"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.2.5",
-		"@tanstack/router-plugin": "^1.132.37",
-		"@types/node": "^24.6.0",
-		"@types/react": "^19.1.16",
-		"@types/react-dom": "^19.1.9",
+		"@tanstack/router-plugin": "^1.132.56",
+		"@types/node": "^24.7.2",
+		"@types/react": "^19.2.2",
+		"@types/react-dom": "^19.2.2",
 		"@vitejs/plugin-react": "^5.0.4",
+		"babel-plugin-react-compiler": "^1.0.0",
 		"globals": "^16.4.0",
 		"typescript": "~5.9.3",
-		"vite": "^7.1.7"
+		"vite": "^7.1.9"
 	}
 }
