--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
 		"format": "biome format --write"
 	},
 	"dependencies": {
+		"@radix-ui/react-slot": "^1.2.3",
 		"@tailwindcss/vite": "^4.1.14",
 		"@tanstack/react-query": "^5.90.3",
 		"@tanstack/react-router": "^1.132.47",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"lucide-react": "^0.545.0",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
+		"tailwind-merge": "^3.3.1",
 		"tailwindcss": "^4.1.14"
 	},
 	"devDependencies": {
@@ -27,6 +32,7 @@
 		"@vitejs/plugin-react": "^5.0.4",
 		"babel-plugin-react-compiler": "^1.0.0",
 		"globals": "^16.4.0",
+		"tw-animate-css": "^1.4.0",
 		"typescript": "~5.9.3",
 		"vite": "^7.1.9"
 	}
