--- a/package.json
+++ b/package.json
@@ -1,39 +1,44 @@
 {
 	"name": "znaphub-pwa",
 	"private": true,
-	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
-		"dev": "vite",
-		"build": "tsc -b && vite build",
-		"preview": "vite preview",
-		"lint": "biome lint --write",
-		"format": "biome format --write"
+		"dev": "vite --port 3000",
+		"build": "vite build && tsc",
+		"serve": "vite preview",
+		"test": "vitest run",
+		"format": "biome format --write",
+    "lint": "biome lint --write"
 	},
 	"dependencies": {
 		"@radix-ui/react-slot": "^1.2.3",
 		"@tailwindcss/vite": "^4.1.14",
-		"@tanstack/react-query": "^5.90.3",
+		"@tanstack/react-devtools": "^0.7.6",
 		"@tanstack/react-router": "^1.132.47",
+		"@tanstack/react-router-devtools": "^1.133.1",
+		"@tanstack/router-plugin": "^1.132.56",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
-		"lucide-react": "^0.545.0",
+		"lucide-react": "^0.544.0",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
 		"tailwind-merge": "^3.3.1",
-		"tailwindcss": "^4.1.14"
+		"tailwindcss": "^4.1.14",
+		"tw-animate-css": "^1.4.0"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "2.2.5",
-		"@tanstack/router-plugin": "^1.132.56",
-		"@types/node": "^24.7.2",
+		"@biomejs/biome": "2.2.6",
+		"@testing-library/dom": "^10.4.1",
+		"@testing-library/react": "^16.3.0",
+		"@types/node": "^22.18.10",
 		"@types/react": "^19.2.2",
 		"@types/react-dom": "^19.2.2",
 		"@vitejs/plugin-react": "^5.0.4",
 		"babel-plugin-react-compiler": "^1.0.0",
-		"globals": "^16.4.0",
-		"tw-animate-css": "^1.4.0",
-		"typescript": "~5.9.3",
-		"vite": "^7.1.9"
+		"jsdom": "^27.0.0",
+		"typescript": "^5.9.3",
+		"vite": "^7.1.9",
+		"vitest": "^3.2.4",
+		"web-vitals": "^5.1.0"
 	}
 }
