--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@radix-ui/react-slot": "^1.2.3",
 		"@tailwindcss/vite": "^4.1.14",
+		"@tanstack/react-query": "^5.90.3",
 		"@tanstack/react-router": "^1.132.47",
 		"@tanstack/router-plugin": "^1.132.56",
 		"class-variance-authority": "^0.7.1",
