--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
 		"react-dom": "^19.2.0",
 		"tailwind-merge": "^3.3.1",
 		"tailwindcss": "^4.1.14",
-		"tw-animate-css": "^1.4.0"
+		"tw-animate-css": "^1.4.0",
+		"zustand": "^5.0.8"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.2.6",
