--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
 		"@tanstack/router-plugin": "^1.132.56",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"keycloak-js": "^26.2.1",
 		"lucide-react": "^0.545.0",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
 		"tailwind-merge": "^3.3.1",
 		"tailwindcss": "^4.1.14",
 		"tw-animate-css": "^1.4.0",
+		"zod": "^4.1.12",
 		"zustand": "^5.0.8"
 	},
 	"devDependencies": {
