remove keycloak and use openid client instead

--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
 		"@tanstack/router-plugin": "^1.132.56",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
-		"keycloak-js": "^26.2.1",
 		"lucide-react": "^0.545.0",
+		"oidc-client-ts": "^3.3.0",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
 		"tailwind-merge": "^3.3.1",
