--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
-VITE_KEYCLOAK_URL=
-VITE_KEYCLOAK_REALM=
-VITE_KEYCLOAK_CLIENT_ID=
 VITE_API_BASE_URL=
+VITE_AUTHENTIK_URL=
+VITE_AUTHENTIK_CLIENT_ID=
+VITE_AUTHENTIK_REDIRECT_URI=
+VITE_AUTHENTIK_SILENT_REDIRECT_URI=
+VITE_AUTHENTIK_POST_LOGOUT_URI=
