--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@radix-ui/react-slot": "^1.2.4",
 		"@tailwindcss/vite": "^4.1.16",
+		"@tanstack/react-form": "^1.23.8",
 		"@tanstack/react-query": "^5.90.7",
 		"@tanstack/react-router": "^1.134.13",
 		"@tanstack/router-plugin": "^1.134.13",
@@ -37,5 +38,6 @@
 		"typescript": "^5.9.3",
 		"vite": "^7.2.1",
 		"web-vitals": "^5.1.0"
-	}
+	},
+	"packageManager": "pnpm@10.20.0+sha512.cf9998222162dd85864d0a8102e7892e7ba4ceadebbf5a31f9c2fce48dfce317a9c53b9f6464d1ef9042cba2e02ae02a9f7c143a2b438cd93c91840f0192b9dd"
 }
