--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
 		"lint": "biome lint --write"
 	},
 	"dependencies": {
+		"@radix-ui/react-checkbox": "^1.3.3",
+		"@radix-ui/react-label": "^2.1.8",
 		"@radix-ui/react-slot": "^1.2.4",
 		"@tailwindcss/vite": "^4.1.16",
 		"@tanstack/react-form": "^1.23.8",
