--- a/package.json
+++ b/package.json
@@ -14,19 +14,21 @@
 		"@radix-ui/react-label": "^2.1.8",
 		"@radix-ui/react-separator": "^1.1.8",
 		"@radix-ui/react-slot": "^1.2.4",
-		"@tailwindcss/vite": "^4.1.16",
+		"@tailwindcss/vite": "^4.1.17",
 		"@tanstack/react-form": "^1.23.8",
 		"@tanstack/react-query": "^5.90.7",
-		"@tanstack/react-router": "^1.134.13",
-		"@tanstack/router-plugin": "^1.134.13",
+		"@tanstack/react-router": "^1.134.15",
+		"@tanstack/router-plugin": "^1.134.15",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.545.0",
+		"next-themes": "^0.4.6",
 		"oidc-client-ts": "^3.3.0",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
+		"sonner": "^2.0.7",
 		"tailwind-merge": "^3.3.1",
-		"tailwindcss": "^4.1.16",
+		"tailwindcss": "^4.1.17",
 		"tw-animate-css": "^1.4.0",
 		"zod": "^4.1.12",
 		"zustand": "^5.0.8"
@@ -39,7 +41,7 @@
 		"@vitejs/plugin-react": "^5.1.0",
 		"babel-plugin-react-compiler": "^1.0.0",
 		"typescript": "^5.9.3",
-		"vite": "^7.2.1",
+		"vite": "^7.2.2",
 		"web-vitals": "^5.1.0"
 	},
 	"packageManager": "pnpm@10.20.0+sha512.cf9998222162dd85864d0a8102e7892e7ba4ceadebbf5a31f9c2fce48dfce317a9c53b9f6464d1ef9042cba2e02ae02a9f7c143a2b438cd93c91840f0192b9dd"
