--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"lucide-react": "^0.545.0",
 		"next-themes": "^0.4.6",
 		"oidc-client-ts": "^3.4.0",
+		"qrcode.react": "^4.2.0",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
 		"sonner": "^2.0.7",
@@ -45,5 +46,5 @@
 		"vite": "^7.2.2",
 		"web-vitals": "^5.1.0"
 	},
-	"packageManager": "pnpm@10.20.0+sha512.cf9998222162dd85864d0a8102e7892e7ba4ceadebbf5a31f9c2fce48dfce317a9c53b9f6464d1ef9042cba2e02ae02a9f7c143a2b438cd93c91840f0192b9dd"
+	"packageManager": "pnpm@10.21.0+sha512.da3337267e400fdd3d479a6c68079ac6db01d8ca4f67572083e722775a796788a7a9956613749e000fac20d424b594f7a791a5f4e2e13581c5ef947f26968a40"
 }
